# RNAEditingIndexer

./: Dockerfile  LICENSE  LICENSE.md  Makefile  Makefile.in  README.md  configure  configure.ac  configure.sh  docker_installations.sh
Docs/: Docker.README.md
JavaModules/BEDUtils/src/: BEDGenomeIndexer.java  EditingIndexBEDUtils.java
RNAEditingIndex/: A2IEditingIndex.py  A2IEditingIndexSummery.py
RNAEditingIndex/DataConverters/: CountPileupCoverter.py  RefSeqGenesCoverter.py  SNPsDBCoverter.py
RNAEditingIndex/EIPipeline/: EIConfig.py  EIPipelineManger.py
RNAEditingIndex/GGPSResources/: data_structs.py  general_functions.py
RNAEditingIndex/GGPSResources/DataEntites/BaseClasses/: EntityRecord.py  KnownProperty.py
RNAEditingIndex/GGPSResources/DataEntites/DataRecords/: GeneRegularExpressionData.py  RefSeqData.py  SNPsData.py
RNAEditingIndex/GGPSResources/Outputers/: Outputer.py
TestResources/BAMs/: BAMsDescription.txt
TestResources/CompareTo/: EditingIndex.csv
make/: Makefile  Makefile.in  compileMouseEncodeGeneExpression.py  initResources.sh
src/EditingIndexJavaUtils/: BEDGenomeIndexer.java  BEDUtilsConsts.java  EditingIndexBEDUtils.java  Makefile.in  PileupToCount.java
src/JavaModules/: Makefile
src/JavaModules/BEDUtils/: BEDUtilsConsts.java  PileupToCount.java
src/RNAEditingIndex/: EditingIndexConsts.py  RNAEditingIndex  libbz2.so.1  libcom_err.so.2  libcrypto.so.10  libexpat.so.1  libffi.so.5  libgssapi_krb5.so.2  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  libpython2.7.so.1.0  libreadline.so.6  libselinux.so.1  libssl.so.10  libtinfo.so.5  libz.so.1
src/RNAEditingIndex/Configs/: DefaultsConfig.ini  FullConfig.ini  FullConfigStranded.ini  ResourcesPaths.ini
src/RNAEditingIndex/DataConverters/: GeneRegularExpressionCoverter.py  SNPsDBCoverter.py
src/RNAEditingIndex/EIPipeline/: ConfigConsts.py
src/RNAEditingIndex/GGPSResources/: __init__.py  consts.py
src/RNAEditingIndex/GGPSResources/DataEntites/BaseClasses/: DataRecord.py  Sample.py
src/RNAEditingIndex/GGPSResources/DataEntites/DataRecords/: GeneRegularExpressionData.py  RefSeqData.py  RegionsData.py
src/RNAEditingIndex/GGPSResources/DataEntites/KnownProperties/: Group.py
src/RNAEditingIndex/GGPSResources/Outputers/: CSVOutputer.py
src/RNAEditingIndex/Resources/Configs/: DefaultsConfig.ini  FullConfig.ini
src/RNAEditingIndex/include/python2.7/: pyconfig-64.h
src/RNAEditingIndex/lib64/python2.7/config/: Makefile
src/RNAEditingIndexSummary/: RNAEditingIndexSummary  libcom_err.so.2  libcrypto.so.10  libgssapi_krb5.so.2  libk5crypto.so.3  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  libpython2.7.so.1.0  libreadline.so.6  libselinux.so.1  libssl.so.10  libtinfo.so.5  libz.so.1  path_locator.py
src/RNAEditingIndexSummary/Configs/: DefaultsConfig.ini  FullConfig.ini  FullConfigStranded.ini  ResourcesPaths.ini
src/RNAEditingIndexSummrey/: RNAEditingIndexSummrey  libbz2.so.1  libcom_err.so.2  libcrypto.so.10  libkeyutils.so.1  libkrb5.so.3  libkrb5support.so.0  libpython2.7.so.1.0  libreadline.so.6  libselinux.so.1  libz.so.1
src/RNAEditingIndexSummrey/Configs/: DefaultsConfig.ini  FullConfig.ini
src/org/apache/commons/cli/: Makefile
